--- a/.github/workflows/coverage-and-test.yml
+++ b/.github/workflows/coverage-and-test.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           python -m pip install -U pip
           pip install -e .
-          pip install flake8
+          pip install --no-cache-dir flake8 coverage
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Lint with flake8
