--- a/.github/workflows/coverage-and-test.yml
+++ b/.github/workflows/coverage-and-test.yml
@@ -33,7 +33,7 @@ jobs:
           python -m pip install -U pip
           pip install -e .
           pip install --no-cache-dir flake8 coverage
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+#          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Lint with flake8
         run: |
